--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Proyecto_Final C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Proyecto_Final CodigoFinal.c)
+add_executable(Proyecto_Final Prueba.c)
